2005-11-20 David Brown <dmlb2000@gmail.com>
	* info/patches/reiser4_patches/reiser4-for-2.6.14-1.patch: added
	* info/patches-sigs/reiser4_patches/reiser4-for-2.6.14-1.patch.gz.sig: added

2005-11-19 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-rc2
	* info/patches/PRE_2_6/patch-2.6.15-rc2: added

2005-11-19 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.15-rc1-mm2
	* info/patches/mm_patches/2.6.15-rc1-mm2: added

2005-11-17 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to 2.6.15-rc1-mm1
	* info/patches/mm_patches/2.6.15-rc1-mm1: added

2005-11-12 David Brown <dmlb2000@gmail.com>
	* info/patches/tarpit_patches/tarpit.patch: fixed source url to point
	  to ibiblio's site
	* info/patches/tarpit_patches/tarpit-for-2.6.14.patch: fixed source url 
	  to point to ibiblio's site

2005-11-12 David Brown <dmlb2000@gmail.com>
	* info/squashfs_patches/squashfs2.2-patch: added 2.6.14 to applied 
	  kernels

2005-11-12 David Brown <dmlb2000@gmail.com>
	* info/patches/ck_server_patches/patch-2.6.14-ck[2345]-server: removed
	* info/patches/ck_server_patches/patch-2.6.14-cks[2345]: added
	* latest.defaults: updated ck server patches 
	* yeah Con changed things a little

2005-11-12 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.15-rc1
	* info/patches/PRE_2_6/patch-2.6.15-rc1: added

2005-11-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck5
	* info/patches/ck_patches/patch-2.6.14-ck5: added

2005-11-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck5-server
	* info/patches/ck_server_patches/patch-2.6.14-ck5-server: added

2005-11-11 David Brown <dmlb2000@gmail.com>
	* latest.defaults: updated latest to patch-2.6.14-ck4-server
	* info/patches/ck_server_patches/patch-2.6.14-ck4-server: added

2005-11-11 David Brown <dmlb2000@gmail.com>