@@ -11,7 +11,7 @@ LATEST_mm_patches=2.6.15-rc1-mm2
 LATEST_ac_patches=patch-2.6.11-ac7
 LATEST_grsecurity_2_4=grsecurity-2.1.0-2.4.28-200501051112.patch
 LATEST_grsec_secfix_2_4=linux-2.4.28-secfix-200501071141.patch
-LATEST_grsecurity_2_6=grsecurity-2.1.6-2.6.11.12-200506141713.patch
+LATEST_grsecurity_2_6=grsecurity-2.1.7-2.6.14.2-200511150641.patch
 LATEST_grsec_secfix_2_6=linux-2.6.10-secfix-200501071130.patch
 LATEST_nitro_patches=patch-2.6.12-nitro5
 LATEST_ck_patches=patch-2.6.14-ck5
