@@ -1,4 +1,8 @@
 2005-11-20 David Brown <dmlb2000@gmail.com>
+	* latest.defaults: updated latest to grsecurity-2.1.7-2.6.14.2-200511150641.patch
+	* info/patches/grsecurity_2_6/grsecurity-2.1.7-2.6.14.2-200511150641.patch: added
+
+2005-11-20 David Brown <dmlb2000@gmail.com>
 	* info/patches/reiser4_patches/reiser4-for-2.6.14-1.patch: added
 	* info/patches-sigs/reiser4_patches/reiser4-for-2.6.14-1.patch.gz.sig: added
 
